# core-allocator-rs

./: Cargo.toml
examples/: main.rs  reuse_cores.rs
src/: allocators.rs  bind_core.rs  lib.rs  main.rs  reexport.rs  resource.rs
