[package]
name = "core-allocator"
version = "0.1.7"
edition = "2021"
description = "A crate to help set core affinity"
repository = "https://github.com/qiujiangkun/core-allocator-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hwloc2 = "2.2.0"
log = "0.4"
nix = "0.23"

[dev-dependencies]
env_logger = "0.9"
lazy_static = "1.4"
