[package]
name = "core-allocator"
version = "0.2.2"
edition = "2021"
description = "A crate to help set core affinity"
repository = "https://github.com/qiujiangkun/core-allocator-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hwloc2 = { version = "2.2.0", optional = true }
log = "0.4"
nix = "0.23"
lazy_static = "1.4.0"

[dev-dependencies]
env_logger = "0.9"

[features]
default = ["hwloc2"]